stylish/src/style/style.css
/** Initial common reset **/

* {
  box-sizing: border-box;
}

body,
div,
ul,
li,
nav,
form,
input,
header,
footer,
main,
a,
p {
  margin: 0;
  padding: 0;
}

body {
  font-family: "Noto Sans TC", sans-serif;
  text-align: center;
  min-height: 100vh;
}

nav,
ul {
  list-style: none;
}

p,
a {
  text-align: center;
}

a {
  text-decoration: none;
}

input {
  font-family: inherit;
  outline: none;
}

input::placeholder {
  color: #8b572a;
  font-size: 20px;
}

/** Common CSS setting **/

.full-width {
  width: 100%;
}

.pointer {
  cursor: pointer;
}

.radius-100 {
  border-radius: 100%;
}

.radius-50 {
  border-radius: 50%;
}

.rowFlexBox {
  display: flex;
  flex-direction: row;
}

.columnFlexBox {
  display: flex;
  flex-direction: column;
}

.flex-no-wrap {
  flex-wrap: nowrap;
}

.fixed {
  position: fixed;
}

.relative {
  position: relative;
}

.absolute {
  position: absolute;
}

.flex-nowrap {
  flex-wrap: nowrap;
}

.flex-space-evenly {
  justify-content: space-evenly;
}

.flex-space-center {
  justify-content: center;
}

.flex-space-between {
  justify-content: space-between;
}

.flex-align-center {
  align-items: center;
}

.flexItem-evenly {
  flex: 1;
}

.text-left {
  text-align: left;
}

.text-center {
  text-align: center;
}

.margin-block-none {
  margin-block-start: 0;
  margin-block-end: 0;
}

.margin-horizontal-center {
  margin-left: auto;
  margin-right: auto;
}

.tx-brown {
  color: #8b572a;
}

.bg-brown {
  background-color: #8b572a;
}

.tx-white {
  color: white;
}

.bg-white {
  background-color: white;
}

.tx-grey {
  color: grey;
}

.tx-grey82 {
  color: #828282;
}

.tx-black {
  color: black;
}

.tx-lightgrey {
  color: lightgrey;
}

.bd-lightgrey {
  border-color: lightgrey;
}

.bg-dark {
  background-color: #313538;
}

.bg-lightgreen {
  background-color: #ddffbb;
}

.bg-greycc {
  background-color: #cccccc;
}

.tx-size20 {
  font-size: 20px;
}

.nav-icon {
  width: 44px;
  height: 44px;
  background-size: cover;
  transition: background-image 0.3s ease;
}

.grid {
  display: grid;
}

.topLayer {
  z-index: 999;
}

/** Header **/

.section__space {
  height: 102px;
}

.header__wrapper {
  height: 102px;
  top: 0;
}

.header__search {
  top: 6px;
  right: 16px;
  width: 40px;
  height: 40px;
}

.header__search img {
  width: 40px;
  height: 40px;
}

.header__logo {
  width: 129px;
  height: 24px;
  margin-top: 14px;
  margin-bottom: 14px;
}

.topNav__list {
  padding: 12px 0 12px 0;
  height: 50px;
}

.header__nav--bottom {
  bottom: 0;
  left: 0;
  height: 60px;
}

.bottomNav__list {
  padding: 8px 0 8px 0;
}

.cartURL__counter {
  height: 24px;
  width: 24px;
  place-items: center;
  right: 0px;
  bottom: 0px;
}

.profileURL__image {
  background-image: url("../../public/member-mobile.png");
}

.cartURL__image {
  background-image: url("../../public/cart-mobile.png");
}

/** main **/

.carousel__image {
  height: 185px;
  object-fit: cover;
}

.carousel__text {
  line-height: 28px;
  left: 23px;
  top: 36px;
}

.carousel__text p {
  font-size: 15px;
}

.carousel__text h4 {
  font-size: 12px;
}

.carousel__dotsContainer {
  width: 55.2px;
  bottom: 18px;
  left: 50%;
  transform: translateX(-50%);
}

.carousel__dot {
  width: 4px;
  height: 4px;
}

.main__product {
  padding: 15px 24px 47px 24px;
  column-gap: 6px;
  row-gap: 24px;
  grid-template-columns: repeat(2, calc(50% - 3px));
}

.product__item {
  height: auto;
  min-height: 270px;
  min-width: 153px;
  gap: 8px;
}

.product__color--container {
  width: 48px;
  margin-bottom: 2px;
}

.product__color--grid {
  width: 12px;
  height: 12px;
  border-style: solid;
  border-width: 1px;
}

.product__description {
  font-size: 12px;
  text-align: left;
  letter-spacing: 2.4px;
}

/** footer **/

footer {
  bottom: 0;
  margin-bottom: 60px;
}

footer a {
  width: 20px;
  height: 20px;
}

.footer__wrapper {
  height: 146px;
  padding-top: 23px;
  padding-bottom: 20px;
}

.footer__wrapper span {
  font-size: 10px;
  transform: scale(0.833);
}

.footer__wrapper--link {
  width: 296px;
  height: 76px;
  font-size: 14px;
}

.footer__wrapper--link div a img {
  width: 20px;
  height: 20px;
}

.footer__linklist {
  justify-content: flex-start;
  row-gap: 8px;
  column-gap: 36px;
  align-content: space-between;
  align-items: start;
  flex-wrap: wrap;
  width: 177px;
  height: 76px;
}

.footer__linklist li {
  line-height: 20px;
}

.footer__socialmedia {
  gap: 14px;
  margin-bottom: 10px;
}

.mobile-hide {
  display: none;
}

/* ================================= 
Media Queries
==================================== */

@media (min-width: 1280px) {
  /** Wider Common CSS setting **/
  .wider-hide {
    display: none;
  }

  .wider-show {
    display: initial;
  }

  .wider-rowFlexBox {
    display: flex;
    flex-direction: row;
  }

  .wider-columnFlexBox {
    display: flex;
    flex-direction: column;
  }

  .wider-absolute {
    position: absolute;
  }

  .wider-tx-brown {
    color: #8b572a;
  }

  .wider-bg-white {
    background-color: rgba(255, 255, 255, 0.4);
  }

  .wider-tx-black3a {
    color: #3f3a3a;
  }

  .wider-tx-whitesmoke {
    color: whitesmoke;
  }

  .wider-tx-black07 {
    color: #070707;
  }

  .wider-tx-size20 {
    font-size: 20px;
  }

  /** header **/

  .section__space {
    height: 140px;
  }

  .header__wrapper {
    height: 140px;
    gap: 14px;
    border-bottom: 40px #313538 solid;
    padding: 26px 54px 26px 60px;
    justify-content: space-between;
  }

  .header__nav--top {
    margin-left: 57px;
  }

  .header__logo--wrapper {
    width: unset;
  }

  .header__logo {
    width: 258px;
    height: 48px;
    margin: 0;
  }

  .topNav__list {
    padding-bottom: 0;
    background-color: transparent;
    width: 451px;
  }

  .topNav__list li {
    letter-spacing: 30px;
    margin-right: -30px;
  }

  .header__search--wrapper {
    gap: 42px;
  }

  .header__searchblock {
    justify-content: flex-end;
  }

  .search__form {
    justify-content: flex-start;
    border-radius: 20px;
    border: 1px #979797 solid;
    width: 214px;
    height: 44px;
    padding: 6px;
  }

  .search__input {
    border: none;
    padding-left: 14px;
    width: 150px;
    height: 25px;
  }

  .search__submit {
    width: 44px;
    height: 44px;
    background: transparent url("../../public/search.png") no-repeat center
      center;
    background-size: contain;
    border: none;
    align-self: center;
  }

  .bottomNav__icon {
    margin-left: 22px;
  }

  .cartURL__image {
    background-image: url("../../public/cart.png");
  }

  .cartURL__image:hover {
    background-image: url("../../public/cart-hover.png");
  }

  .profileURL__image {
    background-image: url("../../public/member.png");
  }

  .profileURL__image:hover {
    background-image: url("../../public/member-hover.png");
  }

  /** Footer **/

  footer {
    margin-bottom: 0;
  }

  .footer__wrapper {
    height: 115px;
    max-width: 1160px;
    padding-top: 0;
    padding-bottom: 0;
    justify-content: flex-end;
    gap: 30px;
  }

  .footer__wrapper--link {
    height: auto;
    width: auto;
    gap: 101px;
    font-size: 16px;
  }

  .footer__linklist {
    width: 670px;
    align-content: center;
  }

  .footer__socialmedia {
    margin-top: 0;
    margin-bottom: 0;
    gap: 30px;
  }

  .footer__wrapper span {
    font-size: 12px;
    transform: none;
  }

  footer a,
  .footer__wrapper--link div a img {
    width: 50px;
    height: 50px;
  }

  /** main **/

  .carousel__image {
    height: 500px;
    object-fit: none;
  }

  .carousel__container {
    max-width: 1160px;
    height: 500px;
    top: 0;
    margin: 0 auto;
  }

  .carousel__text {
    top: 166px;
  }

  .carousel__text p {
    font-size: 30px;
    line-height: 57px;
  }

  .carousel__text h4 {
    line-height: 64px;
    font-size: 20px;
  }

  .carousel__dotsContainer {
    width: 138px;
    bottom: 34px;
  }

  .carousel__dot {
    width: 10px;
    height: 10px;
  }

  .main__product--container {
    max-width: 1160px;
    margin: 0 auto;
  }

  .main__product {
    padding: 70px 0px 110px 0px;
    column-gap: 40px;
    row-gap: 64px;
    grid-template-columns: repeat(3, 1fr);
  }

  .product__item {
    gap: 10px;
  }

  .product__color--container {
    width: 92px;
    margin-top: 10px;
    margin-bottom: 10px;
  }

  .product__color--grid {
    width: 24px;
    height: 24px;
  }

  .product__description {
    font-size: 20px;
    letter-spacing: 4px;
  }
}

